--- a/index.html
+++ b/index.html
@@ -2,19 +2,91 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Divine African Tours | Tailor-Made Safaris in East Africa</title>
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Discover East Africa with Divine African Tours! Explore Uganda, Rwanda, Kenya, and Tanzania with unforgettable tailor-made safaris. Adventure, wildlife, and culture await."
+    />
+    <meta
+      name="keywords"
+      content="African safaris, tailor-made safaris, Uganda safaris, Rwanda tours, Kenya wildlife tours, Tanzania travel, East Africa tourism, Gorilla trekking, Serengeti safaris, safari holidays"
+    />
+    <meta name="author" content="Divine African Tours" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Social Media / Open Graph Tags -->
+    <meta
+      property="og:title"
+      content="Divine African Tours | Tailor-Made Safaris in East Africa"
+    />
+    <meta
+      property="og:description"
+      content="Embark on your dream safari with Divine African Tours. Explore the beauty of Uganda, Rwanda, Kenya, and Tanzania. Custom itineraries for every traveler."
+    />
+    <meta
+      property="og:image"
+      content="https://divineafricantours.com/assets/safari-highlight.jpg"
+    />
+    <meta property="og:url" content="https://divineafricantours.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Divine African Tours" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Divine African Tours | Experience Unforgettable Safaris"
+    />
+    <meta
+      name="twitter:description"
+      content="Join Divine African Tours for tailor-made safaris across Uganda, Rwanda, Kenya, and Tanzania. Create memories to last a lifetime."
+    />
+    <meta
+      name="twitter:image"
+      content="https://divineafricantours.com/assets/safari-highlight.jpg"
+    />
+    <meta name="twitter:site" content="@holidays_divine" />
+
+    <!-- Favicon and Apple Touch Icon -->
+    <!-- <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" /> -->
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://divineafricantours.com" />
+
+    <!-- Additional SEO -->
+    <meta name="theme-color" content="#007bff" />
+    <meta name="rating" content="general" />
+    <meta name="coverage" content="Worldwide" />
+    <meta name="distribution" content="global" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-
-    <title>Divine</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-NXYDC8V3CQ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'G-NXYDC8V3CQ')
+    </script>
   </body>
 </html>
