--- a/index.html
+++ b/index.html
@@ -33,23 +33,26 @@
     <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="Discover East Africa with Divine African Tours! Explore Uganda, Rwanda, Kenya, and Tanzania with unforgettable tailor-made safaris. Adventure, wildlife, and culture await."
+      content="Discover tailor-made African safaris with Divine African Tours. Explore Uganda, Rwanda, Kenya, and Tanzania with custom itineraries, gorilla trekking, wildlife adventures, and cultural experiences."
     />
     <meta
       name="keywords"
-      content="African safaris, tailor-made safaris, Uganda safaris, Rwanda tours, Kenya wildlife tours, Tanzania travel, East Africa tourism, Gorilla trekking, Serengeti safaris, safari holidays"
+      content="African safaris, East Africa tours, Uganda gorilla trekking, Rwanda safaris, Kenya wildlife tours, Tanzania Serengeti, custom safari itineraries, safari holidays, African travel packages, Nile adventures"
     />
     <meta name="author" content="Divine African Tours" />
-    <meta name="robots" content="index, follow" />
+    <meta
+      name="robots"
+      content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"
+    />
 
-    <!-- Social Media / Open Graph Tags -->
+    <!-- Open Graph / Facebook -->
     <meta
       property="og:title"
-      content="Divine African Tours | Tailor-Made Safaris in East Africa"
+      content="Divine African Tours | Tailor-Made Safaris Across East Africa"
     />
     <meta
       property="og:description"
-      content="Embark on your dream safari with Divine African Tours. Explore the beauty of Uganda, Rwanda, Kenya, and Tanzania. Custom itineraries for every traveler."
+      content="Tailor your perfect African safari with Divine African Tours. Travel across Uganda, Rwanda, Kenya, and Tanzania for unmatched wildlife and cultural experiences."
     />
     <meta
       property="og:image"
@@ -58,35 +61,38 @@
     <meta property="og:url" content="https://divineafricantours.com" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Divine African Tours" />
+    <meta property="og:locale" content="en_US" />
 
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Divine African Tours | Experience Unforgettable Safaris"
+      content="Divine African Tours | Unforgettable East African Safaris"
     />
     <meta
       name="twitter:description"
-      content="Join Divine African Tours for tailor-made safaris across Uganda, Rwanda, Kenya, and Tanzania. Create memories to last a lifetime."
+      content="Join Divine African Tours for unforgettable safaris in Uganda, Rwanda, Kenya, and Tanzania. Experience gorilla trekking, wildlife, and African culture."
     />
     <meta
       name="twitter:image"
       content="https://divineafricantours.com/assets/safari-highlight.jpg"
     />
     <meta name="twitter:site" content="@holidays_divine" />
-
-    <!-- Favicon and Apple Touch Icon -->
-    <!-- <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" /> -->
+    <meta name="twitter:creator" content="@holidays_divine" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://divineafricantours.com" />
 
-    <!-- Additional SEO -->
+    <!-- Favicon and Apple Touch Icon (uncomment when needed) -->
+    <!-- <link rel="icon" type="image/png" href="/favicon.png" />
+<link rel="apple-touch-icon" href="/apple-touch-icon.png" /> -->
+
+    <!-- Additional Meta -->
     <meta name="theme-color" content="#007bff" />
     <meta name="rating" content="general" />
     <meta name="coverage" content="Worldwide" />
     <meta name="distribution" content="global" />
+    <meta name="language" content="en" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
