--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
       property="og:description"
       content="Tailor your perfect African safari with Divine African Tours. Travel across Uganda, Rwanda, Kenya, and Tanzania for unmatched wildlife and cultural experiences."
     />
-    <meta
+    <!-- <meta
       property="og:image"
       content="https://divineafricantours.com/assets/safari-highlight.jpg"
-    />
+    /> -->
     <meta property="og:url" content="https://divineafricantours.com" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Divine African Tours" />
     <meta property="og:locale" content="en_US" />
 
     <!-- Twitter Cards -->
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
     <meta
       name="twitter:title"
       content="Divine African Tours | Unforgettable East African Safaris"
@@ -73,10 +73,10 @@
       name="twitter:description"
       content="Join Divine African Tours for unforgettable safaris in Uganda, Rwanda, Kenya, and Tanzania. Experience gorilla trekking, wildlife, and African culture."
     />
-    <meta
+    <!-- <meta
       name="twitter:image"
       content="https://divineafricantours.com/assets/safari-highlight.jpg"
-    />
+    /> -->
     <meta name="twitter:site" content="@holidays_divine" />
     <meta name="twitter:creator" content="@holidays_divine" />
 
@@ -97,7 +97,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
       rel="stylesheet"
     />
   </head>
